
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 FEB 17a
  * in model/thermo/_generic/electronimpact.c
    - in _ke_kl_N2vib_from_Te(), improved the curve fits
    

2025 FEB 06b
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_dSe_dU_transport_Rodriguez2025(), fixed a bug (missing ; at end of line)
    

2025 FEB 06a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Qe_Rodriguez2025(), made improvements
    - in find_dSe_dU_transport_Rodriguez2025(), made improvements
  * in model/thermo/_generic/electronimpact.c
    - in _ke_kl_N2vib_from_Te(), made improvements
    - in _QeN2vib_from_rhok_T_Tv_Te(), made improvements
    - in find_dQeN2vib_from_rhok_T_Tv_Te(), made improvements
    

2025 FEB 04b
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - added TEMODEL_TRANSPORT_RODRIGUEZ2025 in various locations as needed
  * in model/fluid/_Navier-Stokes_plasma/fluid_plasma.c
    - added TEMODEL_TRANSPORT_RODRIGUEZ2025 in various locations as needed


2025 FEB 04a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added CHEMMODEL_ADAMOVICHPARENT2025
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added adamovichparent2025.c and adamovichparent2025.h
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added find_Qe_Rodriguez2025()
    - modified several functions to take TEMODEL_TRANSPORT_RODRIGUEZ2025 into account
    - added find_dSe_dU_transport_Rodriguez2025()
  * in model/thermo/_generic/electronimpact.c
    - added _ke_kl_N2vib_from_Te(), _fk_N2vib_from_Tv(), _QeN2vib_from_rhok_T_Tv_Te(), 
      find_dQeN2vib_from_rhok_T_Tv_Te()
      

2025 JAN 22a
  * in model/chem/_NH3_Plasma_21s/arakoni2007v3.c
    - fixed bugs
  * in model/chem/_NH3_Plasma_21s/chem.hh
    - fixed bugs
    

2025 JAN 21a